update setting button cps003

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
@@ -15,7 +15,7 @@
 .data-layout .form-group>div,
 .data-layout .form-group>label,
 .data-layout .form-group>button{
-	vertical-align: top;
+	vertical-align: middle;
 	display: inline-block;
 }
 .data-layout .form-group>label {
