--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
@@ -78,12 +78,11 @@
         <button style="margin-left: 30px;" id="B4_2">#{i18n.getText('QMM016_37')}</button>
     </div>
     <hr></hr>
-    <div class="tab-row" style="margin-top: 40px;" data-bind="if: $vm.wageTableContent().payment().length >0">
-        <table class="custom-fixed-table normal-fixed-table">
+    <div class="tab-row" style="margin-top: 20px;" data-bind="if: $vm.wageTableContent().payment().length >0">
+        <table id="fixed-table-1d" class="custom-fixed-table">
             <colgroup>
                 <col width="120px"/>
-                <col width="90px"/>
-                <col width="390px"/>
+                <col width="150px"/>
             </colgroup>
             <thead>
             <tr>
@@ -93,29 +92,29 @@
                     </div>
                 </th>
                 <th class="ui-widget-header">#{i18n.getText('QMM016_38')}</th>
-                <th class="ui-widget-header"></th>
             </tr>
             </thead>
             <tbody data-bind="foreach: $vm.wageTableContent().payment">
-            <tr>
-                <td data-bind="with: elementAttribute().firstElementItem">
-                    <div data-bind="text: frameLowerLimit"></div>
-                    <div>#{i18n.getText('QMM016_31')}</div>
-                    <div data-bind="text: frameUpperLimit"></div>
-                </td>
-                <td>
-                    <input data-bind="ntsNumberEditor: {
- 													option: {
- 														width: '60px',
-														decimallength: 3
-													},
-													name: '#[QMM016_39]',
- 													value: wageTablePaymentAmount,
- 													constraint: 'WageTablePaymentAmount',
- 													required: true}" />
-                </td>
-                <td></td>
-            </tr>
+	            <tr>
+	                <td class="ui-widget-header">
+	                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
+	                		<span data-bind="text: masterName"></span>
+	                	</div>
+	                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 1">
+		                    <span data-bind="text: frameLowerLimit"></span>
+		                    <span>#{i18n.getText('QMM016_31')}</span>
+		                    <span data-bind="text: frameUpperLimit"></span>
+	                    </div>
+	                </td>
+	                <td>
+	                    <input data-bind="ntsNumberEditor: {
+							option: { grouplength: 3, width: '120px' },
+							name: '#[QMM016_39]',
+							value: paymentAmount,
+							constraint: 'WageTablePaymentAmount',
+							required: true}" />
+	                </td>
+	            </tr>
             </tbody>
         </table>
     </div>
