--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/o/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/o/index.xhtml
@@ -24,7 +24,7 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<a class="goback" tabindex="1"
+				<a class="goback"
 					data-bind="ntsLinkButton: { jump: '../a/index.xhtml' }">#{i18n.getText('CMF002_27')}</a>
 				<div style="float: right;padding-top: 5px; padding-right: 10px" class="column-1">#{i18n.getText('CMF002_25')}</div>
 
