--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kbt/002/b/kbt002.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kbt/002/b/kbt002.b.main.css
@@ -81,3 +81,6 @@
 [dropdown-for="combobox-daily-per-id"] .nts-combo-column-0 {
   width: 390px !important;
 }
+.middle .ntsMonthDays_Container{
+	top:0px;
+}
