--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kbt/002/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kbt/002/b/index.xhtml
@@ -121,57 +121,90 @@
 				                         			<!-- DateTime setting -->
 			                         			<div class="subExecSetting">
 			                         				<div id="line-one">
-			                         					#{i18n.getText('KBT002_20')}
-			                         					<div tabindex="15" style="width: 173px" class="middle"
-								                                    data-bind="ntsComboBox: {
-								                                    name: '#[KBT002_21]',
-								                                    options: $parent.targetMonthList,
-								                                    optionsValue: 'value',
-								                                    value: targetMonth,
-								                                    optionsText: 'localizedName',
-								                                    editable: false,
-								                                    enable: perScheduleClsNomarl() &amp;&amp; processExecType() == 0,
-								                                    columns: [
-								                                    { prop: 'localizedName', length: 9 },
-								                                    ]}">
+			                         					<div style="float :left;">
+				                         					#{i18n.getText('KBT002_20')}
+				                         					<div tabindex="15" style="width: 173px" class="middle"
+									                                    data-bind="ntsComboBox: {
+									                                    name: '#[KBT002_21]',
+									                                    options: $parent.targetMonthList,
+									                                    optionsValue: 'value',
+									                                    value: targetMonth,
+									                                    optionsText: 'localizedName',
+									                                    editable: false,
+									                                    enable: perScheduleClsNomarl() &amp;&amp; processExecType() == 0,
+									                                    columns: [
+									                                    { prop: 'localizedName', length: 9 },
+									                                    ]}">
+							                                 </div>
 						                                 </div>
-														 <input tabindex="16" style="width: 20px;" class="middle" id="targetDate" data-bind="ntsNumberEditor :{
-																	name: '#[KBT002_22]',
-																	value: targetDate,
-																	constraint: 'TargetDate',
-																	option: '',
-								 									required: true,
-																	enable: perScheduleClsNomarl() &amp;&amp; processExecType() == 0,
-																	readonly: false}" />
-														#{i18n.getText('KBT002_23')}
-														<input tabindex="17" style="width: 20px;" class="middle" id="creationPeriod" data-bind="ntsNumberEditor :{
-																	name: '#[KBT002_24]',
-																	value: creationPeriod,
-																	constraint: 'CreationPeriod',
-																	option: ko.mapping.fromJS({
-																		unitID: 'MONTHS',
-																		width: '60'
-																	}),
-								 									required: true,
-																	enable: perScheduleClsNomarl()  &amp;&amp; processExecType() == 0,
-																	readonly: false}" />
-														<span data-bind = "text: $parent.targetDateText"></span>
+						                                 <div style=" margin-left: 232px;">
+						                                 <div class="middle" data-bind="visible : !disableYearMonthDate()" >
+						                                 	<input tabindex="16" style="width: 20px;" class="middle" id="targetDate" data-bind="ntsNumberEditor :{
+																		name: '#[KBT002_22]',
+																		value: targetDate,
+																		constraint: 'TargetDate',
+																		option: '',
+									 									required: true,
+																		enable: perScheduleClsNomarl() &amp;&amp; processExecType() == 0,
+																		readonly: false}" />
+															#{i18n.getText('KBT002_23')}
+															<input tabindex="17" style="width: 20px;" class="middle" id="creationPeriod" data-bind="ntsNumberEditor :{
+																		name: '#[KBT002_24]',
+																		value: creationPeriod,
+																		constraint: 'CreationPeriod',
+																		option: ko.mapping.fromJS({
+																			unitID: 'MONTHS',
+																			width: '60'
+																		}),
+									 									required: true,
+																		enable: perScheduleClsNomarl()  &amp;&amp; processExecType() == 0,
+																		readonly: false}" />
+															<span data-bind = "text: $parent.targetDateText"></span>
+						                                 </div>
+						                                 <div class="middle" data-bind="visible : disableYearMonthDate()">
+						                                 	<div tabindex="18" style="width: 100px;" 
+									                                    data-bind="ntsComboBox: {
+									                                    name: '#[KBT002_195]',
+									                                    options: $parent.listDesignatedYear,
+									                                    optionsValue: 'value',
+									                                    value: designatedYear,
+									                                    optionsText: 'localizedName',
+									                                    editable: false,
+									                                    enable: enableMonthDay,
+									                                    columns: [
+									                                    { prop: 'localizedName', length: 9 },
+									                                    ]}">
+							                                 </div>
+						                                	 <div id="start-month-day-id" tabindex="19"
+						                                	 	data-bind="ntsMonthDays: {
+						                                	 			name: '#[KBT002_196]',value: startMonthDay, 
+						                                	 			enable: enableMonthDay ,
+						                                	 			required: true }"/> 
+						                                	 <span style=" position: relative;top: -10px;">#{i18n.getText('KBT002_197')}</span>
+						                                	 <div id="end-month-day-id"  tabindex="20"
+						                                	 	data-bind="ntsMonthDays: { 
+						                                	 			name: '#[KBT002_198]',value: endMonthDay , 
+						                                	 			enable: enableMonthDay ,
+						                                	 			required: true }"/>
+						                                 </div>
+						                                 </div>
 			                         				</div>
+			                         				<div class="clear:both"></div>
 			                         				<div id="line-two" style="display:  flex;">
 														<div id="targetCheckBoxes">
 														 	<div id="b212224">
 																<!-- B7_22 -->
-																<div tabindex="18" data-bind="ntsCheckBox: { checked: createEmployee, enable: perScheduleClsNomarl() &amp;&amp; processExecType() == 0 }">#{i18n.getText('KBT002_33')}</div>
+																<div tabindex="21" data-bind="ntsCheckBox: { checked: createEmployee, enable: perScheduleClsNomarl() &amp;&amp; processExecType() == 0 }">#{i18n.getText('KBT002_33')}</div>
 															</div>
 														</div>
 			                         				</div>
 			                         			</div>
 			                         			<div>
 			                         				<!-- B8_1 Title 実行設定.日別実績の作成・計算.日別実績の作成・計算区分-->
-			                         				<div tabindex="19" data-bind="ntsCheckBox: { checked: dailyPerfClsNormal , enable : processExecType() == 0}" >#{i18n.getText('KBT002_35')}</div>
+			                         				<div tabindex="22" data-bind="ntsCheckBox: { checked: dailyPerfClsNormal , enable : processExecType() == 0}" >#{i18n.getText('KBT002_35')}</div>
 				                         			<div class="execSetting">
 						                         		<div id="b858988">
-							                         		<div style="margin-left: 5px;'" tabindex="20" id = "combobox-daily-per-id" class="middle"
+							                         		<div style="margin-left: 5px;'" tabindex="23" id = "combobox-daily-per-id" class="middle"
 										                                    data-bind="ntsComboBox: {
 										                                    width: '420px',
 										                                    name: '#[KBT002_36]',
@@ -190,24 +223,24 @@
 				                         			<div class="execSetting">
 						                         		<div id="b858988">
 							                         		<!-- B8_5  途中入社は入社日からにする-->
-							                         		<div tabindex="21" data-bind="ntsCheckBox: { checked: midJoinEmployee, enable: dailyPerfClsNormal() &amp;&amp; processExecType() == 0 }">#{i18n.getText('KBT002_33')}</div>
+							                         		<div tabindex="24" data-bind="ntsCheckBox: { checked: midJoinEmployee, enable: dailyPerfClsNormal() &amp;&amp; processExecType() == 0 }">#{i18n.getText('KBT002_33')}</div>
 						                         		</div> 	
 					                         		</div>
 					                         		<div class="execSetting">
 						                         		<!--B9_1 承認結果反映 -->
-				                         				<div tabindex="22" data-bind="ntsCheckBox: { checked: reflectResultCls ,enable : processExecType() == 0 }" style="width: 250px;margin-right: 65px;">#{i18n.getText('KBT002_38')}</div>
+				                         				<div tabindex="25" data-bind="ntsCheckBox: { checked: reflectResultCls ,enable : processExecType() == 0 }" style="width: 250px;margin-right: 65px;">#{i18n.getText('KBT002_38')}</div>
 				                         			</div>
 				                         			<div class="execSetting">
 				                         				<!--B10_1 月別集計 -->
-				                         				<div tabindex="23" data-bind="ntsCheckBox: { checked: monthlyAggCls ,enable : processExecType() == 0}" >#{i18n.getText('KBT002_39')}</div>
+				                         				<div tabindex="26" data-bind="ntsCheckBox: { checked: monthlyAggCls ,enable : processExecType() == 0}" >#{i18n.getText('KBT002_39')}</div>
 			                         				</div>
 			                         				<div class="execSetting">
 				                         				<!-- B11_1 月別集計 -->
-				                         				<div tabindex="24" data-bind="ntsCheckBox: { checked: alarmAtr ,enable : processExecType() == 0}" >#{i18n.getText('KBT002_40')}</div>
+				                         				<div tabindex="27" data-bind="ntsCheckBox: { checked: alarmAtr ,enable : processExecType() == 0}" >#{i18n.getText('KBT002_40')}</div>
 				                         				<div class="execSetting">
 					                         				<!-- B11_2 月別集計 -->
 					                         				<div id="b858988">
-						                         				<div tabindex="25" style="width: 253px;margin-left: 5px;'" class="middle"
+						                         				<div tabindex="28" style="width: 253px;margin-left: 5px;'" class="middle"
 										                                    data-bind="ntsComboBox: {
 										                                    name: '#[KBT002_21]',
 										                                    options: $parent.listGetAlarmByUser,
@@ -224,26 +257,26 @@
 				                         					</div>
 				                         					<!-- B11_5 メール送信（管理者）-->
 					                         				<div id="b858988">
-						                         				<div tabindex="26" data-bind="ntsCheckBox: { checked: mailAdministrator ,enable : processExecType() == 0  &amp;&amp; alarmAtr() }" >#{i18n.getText('KBT002_191')}</div>
+						                         				<div tabindex="29" data-bind="ntsCheckBox: { checked: mailAdministrator ,enable : processExecType() == 0  &amp;&amp; alarmAtr() }" >#{i18n.getText('KBT002_191')}</div>
 				                         					</div>
 				                         					<!-- B11_6 メール送信（本人） -->
 					                         				<div id="b858988">
-						                         				<div tabindex="27" data-bind="ntsCheckBox: { checked: mailPrincipal ,enable : processExecType() == 0 &amp;&amp; alarmAtr()}" >#{i18n.getText('KBT002_192')}</div>
+						                         				<div tabindex="30" data-bind="ntsCheckBox: { checked: mailPrincipal ,enable : processExecType() == 0 &amp;&amp; alarmAtr()}" >#{i18n.getText('KBT002_192')}</div>
 				                         					</div>
 			                         					</div>
 			                         				</div>
 			                         				<div  class="execSetting" style="display:flex">
 					                         			<div style="width: 250px;margin-right: 80px;">
 					                         				<!-- B12-1 -->
-					                         				<div tabindex="28" data-bind="ntsCheckBox: { checked: appRouteUpdateAtrNormal ,enable : processExecType() == 0 }" style="width : 100%; ">#{i18n.getText('KBT002_188')}</div>
+					                         				<div tabindex="31" data-bind="ntsCheckBox: { checked: appRouteUpdateAtrNormal ,enable : processExecType() == 0 }" style="width : 100%; ">#{i18n.getText('KBT002_188')}</div>
 					                         				<!-- B12-2 -->
-					                         				<div tabindex="29" class="subExecSetting" data-bind="ntsCheckBox: { checked: createNewEmp, enable: appRouteUpdateAtrNormal() &amp;&amp; processExecType() == 0 }">#{i18n.getText('KBT002_33')}</div>
+					                         				<div tabindex="32" class="subExecSetting" data-bind="ntsCheckBox: { checked: createNewEmp, enable: appRouteUpdateAtrNormal() &amp;&amp; processExecType() == 0 }">#{i18n.getText('KBT002_33')}</div>
 					                         			</div>
 					                         		</div>
 					                         		<div  class="execSetting" style="display:flex">	
 					                         			<div style="width: 250px;margin-right: 80px;">
 					                         				<!-- B12-3 -->
-					                         				<div tabindex="30" data-bind="ntsCheckBox: { checked: appRouteUpdateMonthly ,enable : processExecType() == 0 }" style="width : 100%; ">#{i18n.getText('KBT002_189')}</div>
+					                         				<div tabindex="33" data-bind="ntsCheckBox: { checked: appRouteUpdateMonthly ,enable : processExecType() == 0 }" style="width : 100%; ">#{i18n.getText('KBT002_189')}</div>
 					                         			</div>
 					                         		</div>
 				                         		</div>
@@ -251,7 +284,7 @@
 											<div class="ntsControl" style="width: 100%; margin-bottom : 5px">
 												<label class="ntsRadioBox">
 													<input type="radio" name="checkUpDateCreate" data-bind="checkedValue: 1,checked : processExecType" />
-													<span tabindex="31" class="box"></span><span class="label">#{i18n.getText('KBT002_172')}</span>
+													<span tabindex="34" class="box"></span><span class="label">#{i18n.getText('KBT002_172')}</span>
 												</label>
 												<hr />
 												<div class="execSetting">
@@ -270,21 +303,21 @@
 					                         					</td>
 					                         					<td>
 					                         						<!-- B14_2 -->
-					                         						<div tabindex="32" data-bind="ntsCheckBox: { checked: perScheduleClsReCreate ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_19')}</div>
+					                         						<div tabindex="35" data-bind="ntsCheckBox: { checked: perScheduleClsReCreate ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_19')}</div>
 				                         						</td>
 					                         				</tr>
 					                         				<tr>
 					                         					<td></td>
 					                         					<td>
 					                         						<!-- B14_3 -->
-					                         						<div tabindex="33" data-bind="ntsCheckBox: { checked: dailyPerfClsReCreate ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_175')}</div>
+					                         						<div tabindex="36" data-bind="ntsCheckBox: { checked: dailyPerfClsReCreate ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_175')}</div>
 				                         						</td>
 					                         				</tr>
 					                         				<tr>
 					                         					<td></td>
 					                         					<td>
 					                         						<!-- B14_4 -->
-					                         						<div tabindex="34" data-bind="ntsCheckBox: { checked: appRouteUpdateAtrReCreate ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_188')}</div>
+					                         						<div tabindex="37" data-bind="ntsCheckBox: { checked: appRouteUpdateAtrReCreate ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_188')}</div>
 				                         						</td>
 					                         				</tr>
 					                         				<tr>
@@ -294,9 +327,9 @@
 						                         				</td>
 					                         					<td>
 					                         						<!-- B15_3 -->           
-					                         						<div tabindex="35" data-bind="ntsCheckBox: { checked: recreateWorkType ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_178')}</div>
+					                         						<div tabindex="38" data-bind="ntsCheckBox: { checked: recreateWorkType ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_178')}</div>
 					                         						<!-- B15_4 -->
-					                         						<div tabindex="36" data-bind="ntsCheckBox: { checked: manualCorrection ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_34')}</div>
+					                         						<div tabindex="39" data-bind="ntsCheckBox: { checked: manualCorrection ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_34')}</div>
 					                         						</td>
 					                         				</tr>
 					                         				<tr>
@@ -304,7 +337,7 @@
 					                         					<td>
 					                         					
 					                         						<!-- B15_2 -->
-					                         						<div tabindex="37" data-bind="ntsCheckBox: { checked: recreateTransfer ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_177')}</div>
+					                         						<div tabindex="40" data-bind="ntsCheckBox: { checked: recreateTransfer ,enable : processExecType() == 1 }">#{i18n.getText('KBT002_177')}</div>
 					                         					</td>
 					                         				</tr>
 					                         			</table>
