fix bug 102718 cmf/002/i

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/i/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/i/index.xhtml
@@ -90,8 +90,9 @@
 										visibleItemsCount: 5,
 										value: decimalFraction,
 										optionsText: 'name',
-										enable: $parent.enableDecimalFraction()}">
+										enable: $parent.enableGlobal()}">
 									</div>
+									<!-- enable: $parent.enableDecimalFraction() -->
 								</div>
 							</div>
 						</div>
